--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -21,6 +22,11 @@
   </script>
 </head>
 <body class="min-h-screen">
-  {% block content %}{% endblock content %}
+    {% block content %}
+
+    {% endblock %}
+
+    {% include 'toast.html' %}
+    {% include 'modal.html' %}
 </body>
 </html>
